# gc_bad_homeassistant

./: .cursorignore  .env.example  .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  gocardless_api.json  pyproject.toml  pytest.ini  validate_integration.py
custom_components/gc_bad/: __init__.py  api_client.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  views.py
custom_components/gc_bad/translations/: en.json
docs/: architecture.md  oauth.md  testing.md
src/gc_bad_homeassistant/: __init__.py
tests/: README_TESTS.md  SANDBOX_TESTING.md  __init__.py  check_rate_limit_headers.py  conftest.py  connect_sandbox.py  manual_test_script.py  reset_rate_limits.py  test_api_client_live.py  test_basic.py  test_config_flow.py  test_integration_live.py
